namespace dev.kaldiroglu.Bridge.Basic.Pattern;

/// <summary>A ConcreteImplementor.</summary>
public class AConcreteImplementation1 : IAnAbstractionImplementation
{
    public void DoingIt() => Console.WriteLine("  AConcreteImplementation1: I am doing it!");
}
