namespace dev.kaldiroglu.Bridge.Basic.Pattern;

/// <summary>A ConcreteImplementor.</summary>
public class AConcreteImplementation2 : IAnAbstractionImplementation
{
    public void DoingIt() => Console.WriteLine("  AConcreteImplementation2: I am doing it!");
}
