namespace dev.kaldiroglu.Bridge.Basic.Pattern;

/// <summary>
/// The Implementor.
/// <para>
/// Note the name: the earlier spelling of this interface was
/// <c>AnAbstrationImplementation</c>, which is the sort of thing that survives for years
/// because nothing ever reads it aloud.
/// </para>
/// </summary>
public interface IAnAbstractionImplementation
{
    void DoingIt();
}
